# ESP32_flower_humidity_monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  bluetooth_client.c  bluetooth_client.h  main.c  spiffs.c  spiffs.h  wifi.c  wifi.h  wifi_credentials.c  wifi_credentials.h
